@@ -2,6 +2,8 @@ Revision history for Datahub-Factory-VKC
 
 {{$NEXT}}
 
+    - Changed: added AAT & Creators SQLite generation to KMSKA module.
+
 0.92  2017-09-06 10:59:08 CEST
 
     - Changed: updated documentation and licensing
